# sdkwork-browser

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
crates/sdkwork-api-browser-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-browser-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-browser-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-browser-abstraction-service/: Cargo.toml  README.md
crates/sdkwork-browser-abstraction-service/specs/: component.spec.json
crates/sdkwork-browser-abstraction-service/src/: error.rs  lib.rs  network.rs  plugin.rs  profile.rs  runtime.rs
crates/sdkwork-browser-agent-service/: Cargo.toml  README.md
crates/sdkwork-browser-agent-service/specs/: component.spec.json
crates/sdkwork-browser-agent-service/src/: agent.rs  kernel_diagnostics.rs  lib.rs  llm_runtime.rs
crates/sdkwork-browser-api-server/: Cargo.toml
crates/sdkwork-browser-api-server/specs/: component.spec.json
crates/sdkwork-browser-api-server/src/: gateway_manifest.rs  main.rs
crates/sdkwork-browser-app-server/: Cargo.toml
crates/sdkwork-browser-app-server/specs/: component.spec.json
crates/sdkwork-browser-app-server/src/: gateway_manifest.rs  main.rs
crates/sdkwork-browser-bookmark-service/: Cargo.toml  README.md
crates/sdkwork-browser-bookmark-service/specs/: component.spec.json
crates/sdkwork-browser-bookmark-service/src/: bookmark.rs  lib.rs
crates/sdkwork-browser-cookie-service/: Cargo.toml  README.md
crates/sdkwork-browser-cookie-service/specs/: component.spec.json
crates/sdkwork-browser-cookie-service/src/: cookie.rs  lib.rs
crates/sdkwork-browser-database-host/: Cargo.toml
crates/sdkwork-browser-database-host/specs/: component.spec.json
crates/sdkwork-browser-database-host/src/: lib.rs
crates/sdkwork-browser-engine-api-service/: Cargo.toml
crates/sdkwork-browser-engine-api-service/specs/: component.spec.json
crates/sdkwork-browser-engine-api-service/src/: engine.rs  error.rs  ids.rs  lib.rs
crates/sdkwork-browser-engine-cef-service/: Cargo.toml  README.md
crates/sdkwork-browser-engine-cef-service/specs/: component.spec.json
crates/sdkwork-browser-engine-cef-service/src/: cef_engine.rs  cef_native.rs  cef_surface.rs  engine.rs  lib.rs
crates/sdkwork-browser-engine-registry-service/: Cargo.toml
crates/sdkwork-browser-engine-registry-service/specs/: component.spec.json
crates/sdkwork-browser-engine-registry-service/src/: error.rs  lib.rs  registry.rs
crates/sdkwork-browser-engine-servo-service/: Cargo.toml  README.md
crates/sdkwork-browser-engine-servo-service/specs/: component.spec.json
crates/sdkwork-browser-engine-servo-service/src/: lib.rs  servo.rs  servo_engine.rs
crates/sdkwork-browser-engine-webview-service/: Cargo.toml
crates/sdkwork-browser-engine-webview-service/specs/: component.spec.json
crates/sdkwork-browser-engine-webview-service/src/: lib.rs  webview.rs
crates/sdkwork-browser-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-browser-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-browser-history-service/: Cargo.toml  README.md
crates/sdkwork-browser-history-service/specs/: component.spec.json
crates/sdkwork-browser-history-service/src/: history.rs  lib.rs
crates/sdkwork-browser-mcp-service/: Cargo.toml  README.md
crates/sdkwork-browser-mcp-service/specs/: component.spec.json
crates/sdkwork-browser-mcp-service/src/: lib.rs  mcp.rs  shell.rs  stdio_session.rs  stdio_transport.rs
crates/sdkwork-browser-native-host/: Cargo.toml  README.md
crates/sdkwork-browser-native-host/specs/: component.spec.json
crates/sdkwork-browser-native-host/src/: lib.rs  native_runtime.rs
crates/sdkwork-browser-platform-service/: Cargo.toml
crates/sdkwork-browser-platform-service/specs/: component.spec.json
crates/sdkwork-browser-platform-service/src/: config.rs  lib.rs  platform.rs
crates/sdkwork-browser-plugin-service/: Cargo.toml  README.md
crates/sdkwork-browser-plugin-service/specs/: component.spec.json
crates/sdkwork-browser-plugin-service/src/: lib.rs  registry.rs
crates/sdkwork-browser-service-host/: Cargo.toml
crates/sdkwork-browser-service-host/specs/: component.spec.json
crates/sdkwork-browser-service-host/src/: factory.rs  lib.rs
crates/sdkwork-browser-session-service/: Cargo.toml  README.md
crates/sdkwork-browser-session-service/specs/: component.spec.json
crates/sdkwork-browser-session-service/src/: lib.rs  session.rs
crates/sdkwork-browser-standalone-gateway/: Cargo.toml
crates/sdkwork-browser-standalone-gateway/specs/: component.spec.json
crates/sdkwork-browser-standalone-gateway/src/: gateway_manifest.rs  main.rs
crates/sdkwork-browser-storage-sqlx-rust/: Cargo.toml
crates/sdkwork-browser-storage-sqlx-rust/migrations/: DEPRECATED.md
crates/sdkwork-browser-storage-sqlx-rust/specs/: component.spec.json
crates/sdkwork-browser-storage-sqlx-rust/src/: bootstrap.rs  lib.rs  storage.rs
crates/sdkwork-browser-storage-sqlx-rust/tests/: browser_storage_standard.rs
crates/sdkwork-browser-tauri-host/: Cargo.toml
crates/sdkwork-browser-tauri-host/specs/: component.spec.json
crates/sdkwork-browser-tauri-host/src/: lib.rs  platform_host.rs  status.rs  webview_runtime.rs
crates/sdkwork-platform-browser-repository-sqlx/: Cargo.toml
crates/sdkwork-platform-browser-repository-sqlx/migrations/: DEPRECATED.md
crates/sdkwork-platform-browser-repository-sqlx/specs/: component.spec.json
crates/sdkwork-platform-browser-repository-sqlx/src/: lib.rs
crates/sdkwork-platform-browser-repository-sqlx/tests/: browser_storage_standard.rs
crates/sdkwork-router-browser-app-api/: Cargo.toml
crates/sdkwork-router-browser-app-api/specs/: component.spec.json
crates/sdkwork-router-browser-backend-api/: Cargo.toml
crates/sdkwork-routes-browser-app-api/: Cargo.toml
crates/sdkwork-routes-browser-support/: Cargo.toml
(+249 files in other folders)
