[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-browser-assembly",
    "crates/sdkwork-api-browser-assembly",
    "crates/sdkwork-browser-engine-api-service",
    "crates/sdkwork-browser-engine-registry-service",
    "crates/sdkwork-browser-engine-webview-service",
    "crates/sdkwork-browser-engine-cef-service",
    "crates/sdkwork-browser-engine-servo-service",
    "crates/sdkwork-browser-platform-service",
    "crates/sdkwork-browser-service-host",
    "crates/sdkwork-api-browser-standalone-gateway",
    "crates/sdkwork-routes-browser-app-api",
    "crates/sdkwork-routes-browser-backend-api",
    "crates/sdkwork-routes-browser-support",
    "crates/sdkwork-browser-abstraction-service",
    "crates/sdkwork-browser-tauri-host",
    "crates/sdkwork-browser-native-host",
    "crates/sdkwork-browser-network-service",
    "crates/sdkwork-browser-tab-service",
    "crates/sdkwork-browser-session-service",
    "crates/sdkwork-browser-history-service",
    "crates/sdkwork-browser-bookmark-service",
    "crates/sdkwork-browser-download-service",
    "crates/sdkwork-browser-cookie-service",
    "crates/sdkwork-browser-security-service",
    "crates/sdkwork-browser-agent-service",
    "crates/sdkwork-browser-mcp-service",
    "crates/sdkwork-browser-plugin-service",
    "crates/sdkwork-platform-browser-repository-sqlx",
    "crates/sdkwork-browser-database-host",
    "crates/sdkwork-browser-shared-service",
    "apps/sdkwork-browser-pc/packages/sdkwork-browser-pc-desktop/src-tauri",
]

[workspace.dependencies]
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-browser-database-host = { path = "crates/sdkwork-browser-database-host" }
sdkwork-browser-abstraction-service = { path = "crates/sdkwork-browser-abstraction-service" }
sdkwork-browser-agent-service = { path = "crates/sdkwork-browser-agent-service" }
sdkwork-browser-engine-api-service = { path = "crates/sdkwork-browser-engine-api-service" }
sdkwork-browser-engine-cef-service = { path = "crates/sdkwork-browser-engine-cef-service" }
sdkwork-browser-engine-registry-service = { path = "crates/sdkwork-browser-engine-registry-service" }
sdkwork-browser-engine-servo-service = { path = "crates/sdkwork-browser-engine-servo-service" }
sdkwork-browser-engine-webview-service = { path = "crates/sdkwork-browser-engine-webview-service" }
sdkwork-api-browser-assembly = { path = "crates/sdkwork-api-browser-assembly" }
sdkwork-browser-mcp-service = { path = "crates/sdkwork-browser-mcp-service" }
sdkwork-browser-network-service = { path = "crates/sdkwork-browser-network-service" }
sdkwork-browser-plugin-service = { path = "crates/sdkwork-browser-plugin-service" }
sdkwork-browser-tab-service = { path = "crates/sdkwork-browser-tab-service" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-browser-platform-service = { path = "crates/sdkwork-browser-platform-service" }
sdkwork-routes-browser-support = { path = "crates/sdkwork-routes-browser-support" }
sdkwork-routes-browser-app-api = { path = "crates/sdkwork-routes-browser-app-api" }
sdkwork-routes-browser-backend-api = { path = "crates/sdkwork-routes-browser-backend-api" }
axum = { version = "0.8", default-features = false, features = ["json"] }
bytes = "1"
futures = "0.3"
sdkwork-browser-shared-service = { path = "crates/sdkwork-browser-shared-service" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
