[package]
name = "sdkwork-browser-app-server"
description = "Local HTTP gateway for SDKWork Browser app-api and backend-api on port 8080."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sdkwork-browser-app-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sdkwork-browser-service-host = { path = "../sdkwork-browser-service-host" }
sdkwork-router-browser-app-api = { path = "../sdkwork-router-browser-app-api" }
sdkwork-router-browser-backend-api = { path = "../sdkwork-router-browser-backend-api" }
sdkwork-routes-browser-app-api = { path = "../sdkwork-routes-browser-app-api" }
sdkwork-routes-browser-backend-api = { path = "../sdkwork-routes-browser-backend-api" }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-appbase/crates/sdkwork-iam-web-adapter" }
sdkwork-web-axum = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-bootstrap = { path = "../../../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
