[package]
name = "sdkwork-browser-bookmark-service"
description = "Bookmark folders, search, import/export."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sdkwork-browser-shared-service.workspace = true
