[package]
name = "sdkwork-browser-engine-api-service"
description = "Browser Engine Standard — pluggable engine trait and shared engine types."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
