[package]
name = "sdkwork-browser-engine-registry-service"
description = "Browser Engine Registry — dynamic engine registration and lookup (PRD §7)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-browser-engine-api-service.workspace = true
sdkwork-browser-engine-cef-service.workspace = true
sdkwork-browser-engine-servo-service.workspace = true
sdkwork-browser-engine-webview-service.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
