[package]
name = "sdkwork-browser-engine-webview-service"
description = "WebView browser engine (WebView2, WKWebView, WebKitGTK, Android WebView)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-browser-engine-api-service = { path = "../sdkwork-browser-engine-api-service" }

[dev-dependencies]
tokio.workspace = true
