[package]
name = "sdkwork-browser-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-browser application HTTP plane."

[lib]
name = "sdkwork_browser_gateway_assembly"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum.workspace = true
tokio.workspace = true
sdkwork-browser-platform-service.workspace = true
sdkwork-routes-browser-support.workspace = true
sdkwork_routes_browser_app_api = { package = "sdkwork-routes-browser-app-api", path = "../sdkwork-routes-browser-app-api" }
sdkwork_routes_browser_backend_api = { package = "sdkwork-routes-browser-backend-api", path = "../sdkwork-routes-browser-backend-api" }
