[package]
name = "sdkwork-browser-mcp-service"
description = "MCP client/server integration for enterprise connectors."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-browser-abstraction-service.workspace = true
serde.workspace = true
serde_json.workspace = true
