[package]
name = "sdkwork-browser-native-host"
description = "Native browser host adapter backed by Chromium Embedded Framework."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-browser-abstraction-service.workspace = true
sdkwork-browser-engine-cef-service.workspace = true
sdkwork-browser-network-service.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
