[package]
name = "sdkwork-browser-platform-service"
description = "Browser Runtime Platform public API — config, registry, tabs, agent, MCP (PRD Browser API)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid.workspace = true
sdkwork-browser-agent-service = { path = "../sdkwork-browser-agent-service" }
sdkwork-browser-engine-api-service = { path = "../sdkwork-browser-engine-api-service" }
sdkwork-browser-engine-registry-service = { path = "../sdkwork-browser-engine-registry-service" }
sdkwork-browser-mcp-service = { path = "../sdkwork-browser-mcp-service" }
sdkwork-browser-plugin-service = { path = "../sdkwork-browser-plugin-service" }
sdkwork-browser-abstraction-service = { path = "../sdkwork-browser-abstraction-service" }
sdkwork-browser-tab-service = { path = "../sdkwork-browser-tab-service" }
sdkwork-browser-engine-cef-service = { path = "../sdkwork-browser-engine-cef-service" }
sdkwork-utils-rust.workspace = true
thiserror.workspace = true

[features]
default = []
cef = ["sdkwork-browser-engine-cef-service/cef"]

[dev-dependencies]
tokio.workspace = true
