[package]
name = "sdkwork-browser-platform-service"
description = "Browser Runtime Platform public API — config, registry, tabs, agent, MCP (PRD Browser API)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid.workspace = true
sdkwork-browser-agent-service.workspace = true
sdkwork-browser-engine-api-service.workspace = true
sdkwork-browser-engine-registry-service.workspace = true
sdkwork-browser-mcp-service.workspace = true
sdkwork-browser-plugin-service.workspace = true
sdkwork-browser-abstraction-service.workspace = true
sdkwork-browser-tab-service.workspace = true
sdkwork-browser-engine-cef-service.workspace = true
sdkwork-utils-rust.workspace = true
thiserror.workspace = true

[features]
default = []
cef = ["sdkwork-browser-engine-cef-service/cef"]

[dev-dependencies]
tokio.workspace = true
