[package]
name = "sdkwork-browser-plugin-service"
description = "Unified browser plugin registry."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-browser-abstraction-service.workspace = true
sdkwork-browser-agent-service.workspace = true
sdkwork-browser-mcp-service.workspace = true
