[package]
name = "sdkwork-browser-service-host"
description = "Browser Runtime composition host and platform factory."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-browser-engine-api-service.workspace = true
sdkwork-browser-engine-registry-service.workspace = true
sdkwork-browser-platform-service.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
