[package]
name = "sdkwork-browser-session-service"
description = "Multi-account session isolation and persistence."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
sdkwork-browser-shared-service.workspace = true
