[package]
name = "sdkwork-browser-standalone-gateway"
description = "HTTP API server for SDKWork Browser app-api and backend-api surfaces."
version.workspace = true
edition.workspace = true
license.workspace = true


[[bin]]
name = "sdkwork-browser-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_browser_gateway_assembly = { package = "sdkwork-browser-gateway-assembly", path = "../sdkwork-browser-gateway-assembly" }
axum.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }


