[package]
name = "sdkwork-browser-storage-sqlx-rust"
description = "SDKWork Browser SQL storage contracts and migrations."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-browser-database-host = { path = "../sdkwork-browser-database-host" }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
