[package]
name = "sdkwork-browser-tauri-host"
description = "Tauri 2 WebView browser host adapter (WebView2, WKWebView, WebKitGTK)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
sdkwork-browser-abstraction-service = { path = "../sdkwork-browser-abstraction-service" }
sdkwork-browser-network-service = { path = "../sdkwork-browser-network-service" }
sdkwork-browser-platform-service = { path = "../sdkwork-browser-platform-service" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
tauri-shell = ["dep:tauri"]

[dependencies.tauri]
version = "2"
optional = true
