[package]
name = "sdkwork-browser-tauri-host"
description = "Tauri 2 WebView browser host adapter (WebView2, WKWebView, WebKitGTK)."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
sdkwork-browser-abstraction-service.workspace = true
sdkwork-browser-network-service.workspace = true
sdkwork-browser-platform-service.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
tauri-shell = ["dep:tauri"]

[dependencies.tauri]
version = "2"
optional = true
