[package]
name = "sdkwork-platform-browser-repository-sqlx"
description = "SDKWork platform browser SQLx repository implementation."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-browser-database-host = { path = "../sdkwork-browser-database-host" }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
