[package]
name = "sdkwork-platform-browser-repository-sqlx"
description = "SDKWork platform browser SQLx repository implementation."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-browser-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
