[package]
name = "sdkwork-routes-browser-app-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork Browser app-api route manifest."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-routes-browser-support.workspace = true
sdkwork-browser-platform-service.workspace = true
sdkwork-browser-agent-service.workspace = true
sdkwork-browser-mcp-service.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true

[dev-dependencies]
sdkwork-web-core.workspace = true
