[package]
name = "sdkwork-routes-browser-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared browser HTTP router helpers for sdkwork-web-framework integration."

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-web-core.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-browser-platform-service.workspace = true
serde.workspace = true
serde_json.workspace = true
